fix svg overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -40,4 +40,5 @@ h1 {
 svg {
 	height: 130px;
 	padding-bottom: 10px;
+	width: 100%;
 }
